app/assets/stylesheets/application.scss
/*
    Styling in this and other .scss files will be compiled by the sbt-sass-compiler plugin: https://github.com/hmrc/sbt-sass-compiler
    If you encounter any issue with Sass compilation using the plugin, please reach out to the PlatUI team.
 */

.js-visible {
  display: none !important;
}
.js-enabled .js-visible {
  display: inline-block !important;
}

.app-related-items {
  border-top: 2px solid #1d70b8;
  padding-top: 10px;
}

.app-related-items .govuk-list > li {
  margin-bottom: 10px;
}

.govuk-section-break--l {
  margin-top: 0px;
}

.autocomplete__wrapper {
    max-width: 11.5em;
}
.autocomplete__dropdown-arrow-down {
    z-index: 0;
    pointer-events: none;
}

/* Return history table width */
.return-history-table {
  width: 100%;
}

.return-history-table .rh-col-period {width : 22%;}
.return-history-table .rh-col-date {width : 22%;}
.return-history-table .rh-col-return {width : 14%;}
.return-history-table .rh-col-receipt {width : 18%;}
.return-history-table .rh-col-status {width : 24%;}

